--- a/whoami-ingress2.yaml
+++ b/whoami-ingress2.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: whoami-ingress
+  name: whoami-ingress2
 spec:
   ingressClassName: traficante2-traefik
   rules:
