--- a/whoami-deployment.yaml
+++ b/whoami-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: whoami-deployment
 spec:
-  replicas: 2
+  #replicas: 2 
   selector:
     matchLabels:
       app: whoami-app
